2022-04-17T01:50:39Z:
* notice: last 14d: all unq: 2206 6
* notice: prev accum: outdated-all outdated-unq / all unq: 13033 381 / 15236 413
* notice: next accum: outdated-all outdated-unq / all unq: 13206 385 / 15412 411
* notice: prev json diff // prev day diff: unq all: +0 +62 / -2 -39 // +0 +62 / -2 -39

2022-04-16T16:31:01Z:
* notice: last 14d: all unq: 2203 9
* notice: prev accum: outdated-all outdated-unq / all unq: 13033 381 / 15223 412
* notice: next accum: outdated-all outdated-unq / all unq: 13033 381 / 15236 413
* notice: prev json diff // prev day diff: unq all: +1 +67 / -0 -54 // +3 +182 / -0 -153

2022-04-16T08:26:19Z:
* notice: last 14d: all unq: 2190 9
* notice: prev accum: outdated-all outdated-unq / all unq: 12881 379 / 15074 410
* notice: next accum: outdated-all outdated-unq / all unq: 13033 381 / 15223 412
* notice: prev json diff // prev day diff: unq all: +2 +115 / -0 -99 // +2 +115 / -0 -99

2022-04-15T16:09:01Z:
* notice: last 14d: all unq: 2193 9
* notice: prev accum: outdated-all outdated-unq / all unq: 12881 379 / 15058 410
* notice: next accum: outdated-all outdated-unq / all unq: 12881 379 / 15074 410
* notice: prev json diff // prev day diff: unq all: +0 +67 / -0 -51 // +1 +169 / -0 -133

2022-04-15T08:09:24Z:
* notice: last 14d: all unq: 2177 9
* notice: prev accum: outdated-all outdated-unq / all unq: 12881 379 / 15080 409
* notice: next accum: outdated-all outdated-unq / all unq: 12881 379 / 15058 410
* notice: prev json diff // prev day diff: unq all: +1 +48 / -0 -70 // +1 +102 / -0 -82

2022-04-15T00:31:41Z:
* notice: last 14d: all unq: 2199 9
* notice: prev accum: outdated-all outdated-unq / all unq: 12718 373 / 14892 405
* notice: next accum: outdated-all outdated-unq / all unq: 12881 379 / 15080 409
* notice: prev json diff // prev day diff: unq all: +0 +54 / -0 -12 // +0 +54 / -0 -12

2022-04-14T16:09:27Z:
* notice: last 14d: all unq: 2174 9
* notice: prev accum: outdated-all outdated-unq / all unq: 12718 373 / 14892 405