@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-17T01:50:39Z",
-  "count" : 122,
+  "timestamp" : "2022-04-17T08:26:32Z",
+  "count" : 71,
   "count_minmax" : [ 0, 161 ],
   "count_prev_day_inc" : 164,
   "count_prev_day_dec" : 138,
