@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-17T01:50:39Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 62,
-  "count_prev_day_dec" : 39,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "timestamp" : "2022-04-17T08:26:32Z",
+  "count" : 72,
+  "count_minmax" : [ 0, 72 ],
+  "count_prev_day_inc" : 134,
+  "count_prev_day_dec" : 90,
+  "uniques" : 6,
+  "uniques_minmax" : [ 0, 6 ],
+  "uniques_prev_day_inc" : 6,
   "uniques_prev_day_dec" : 2
 }
