@@ -1,10 +1,10 @@
 {
-  "count": 2206,
-  "uniques": 6,
+  "count": 2227,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-04-03T00:00:00Z",
-      "count": 122,
+      "count": 71,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-04-16T00:00:00Z",
       "count": 186,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-04-17T00:00:00Z",
+      "count": 72,
+      "uniques": 6
     }
   ]
 }
